<resources>
  <string name="app_name">Garmax</string>
  <string name="tack_name_placeholder">Morning ride</string>
  <string name="date_placeholder">07/12/2021</string>
  <string name="time_pm_placeholder">5:12 PM</string>
  <string name="distance_placeholder">%.2f</string>
  <string name="speed_placeholder">%.2f</string>
  <string name="time_placeholder">%s:%s:%s</string>
  <string name="track_point_placeholder">%d trkpts</string>
  <string name="altitude_average_placeholder">av. %.2f</string>
  <string name="altitude_min_placeholder">min. %.2f</string>
  <string name="altitude_max_placeholder">max. %.2f</string>

  <string name="live_data"><u>Live data</u></string>
  <string name="last_update">Last update</string>
  <string name="distance">Distance (km)</string>
  <string name="speed">Speed (km/h)</string>
  <string name="speed_average">Speed Average (km/h)</string>
  <string name="time">Time (h:m:s)</string>
  <string name="time_hm">Time (h:m)</string>
  <string name="altitude">Altitude (m)</string>

  <string name="file_name_placeholder">2021_12_09T00:49:14+0100.gpx</string>
  <string name="file_date_placeholder">18/02/2021 14:27</string>
  <string name="storage_path_placeholder">Loaded from: %s</string>
  <string name="past_activity_title">Your past activity</string>
</resources>