<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/garmin_grey_background"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <!-- HEADER -->
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/garmin_black"
    android:padding="6dp">

    <ImageButton
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:background="@android:color/transparent"
      android:scaleType="fitCenter"
      android:src="@drawable/professor"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
      android:id="@+id/explorerBtn"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:background="@android:color/transparent"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_baseline_more_vert_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <!-- Circles -->
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="5dp">

    <TextView
      android:id="@+id/liveData"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:text="@string/live_data"
      android:textColor="@color/garmin_text_white"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/trackPointsText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="2dp"
      android:padding="2dp"
      android:text="@string/track_point_placeholder"
      android:textColor="@color/garmin_text_grey"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/liveData" />

    <!-- Circle Blue -->

    <ImageView
      android:id="@+id/circleBlue"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:src="@drawable/garmin_circle_blue"
      app:layout_constraintBottom_toBottomOf="@+id/circleOrange"
      app:layout_constraintEnd_toEndOf="@+id/circleOrange"
      app:layout_constraintHorizontal_bias="0.1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/circleOrange"
      app:layout_constraintVertical_bias="4"
      tools:ignore="ContentDescription" />

    <TextView
      android:id="@+id/liveTimeText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/time_placeholder"
      android:textColor="@color/white"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/circleBlue"
      app:layout_constraintEnd_toEndOf="@+id/circleBlue"
      app:layout_constraintStart_toStartOf="@+id/circleBlue"
      app:layout_constraintTop_toTopOf="@+id/circleBlue" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/time"
      android:textColor="@color/garmin_text_grey"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="@+id/circleBlue"
      app:layout_constraintStart_toStartOf="@+id/circleBlue"
      app:layout_constraintTop_toBottomOf="@+id/liveTimeText" />

    <!-- Circle Green -->

    <ImageView
      android:id="@+id/circleGreen"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:src="@drawable/garmin_circle_green"
      app:layout_constraintBottom_toBottomOf="@+id/circleOrange"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
      app:layout_constraintStart_toStartOf="@+id/circleOrange"
      app:layout_constraintTop_toTopOf="@+id/circleOrange"
      app:layout_constraintVertical_bias="4"
      tools:ignore="ContentDescription" />

    <TextView
      android:id="@+id/liveSpeedText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/speed_placeholder"
      android:textColor="@color/white"
      android:textSize="45sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/circleGreen"
      app:layout_constraintEnd_toEndOf="@+id/circleGreen"
      app:layout_constraintStart_toStartOf="@+id/circleGreen"
      app:layout_constraintTop_toTopOf="@+id/circleGreen" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/speed"
      android:textColor="@color/garmin_text_grey"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="@+id/circleGreen"
      app:layout_constraintStart_toStartOf="@+id/circleGreen"
      app:layout_constraintTop_toBottomOf="@+id/liveSpeedText" />

    <!-- Circle Orange -->

    <ImageView
      android:id="@+id/circleOrange"
      android:layout_width="180dp"
      android:layout_height="180dp"
      android:layout_marginTop="20dp"
      android:src="@drawable/garmin_circle_orange"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription" />

    <TextView
      android:id="@+id/liveDistanceText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/distance_placeholder"
      android:textColor="@color/white"
      android:textSize="50sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/circleOrange"
      app:layout_constraintEnd_toEndOf="@+id/circleOrange"
      app:layout_constraintStart_toStartOf="@+id/circleOrange"
      app:layout_constraintTop_toTopOf="@+id/circleOrange" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/distance"
      android:textColor="@color/garmin_text_grey"
      android:textSize="15sp"
      app:layout_constraintEnd_toEndOf="@+id/circleOrange"
      app:layout_constraintStart_toStartOf="@+id/circleOrange"
      app:layout_constraintTop_toBottomOf="@+id/liveDistanceText" />

    <ImageButton
      android:id="@+id/trackerBtn"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_gravity="center"
      android:background="@android:color/transparent"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_baseline_play_circle_outline_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <griffith.baptiste.martinet.garmax.Graph
    android:id="@+id/liveSpeedGraph"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginTop="20dp"
    app:axis_abscissa_name="@string/time_hm"
    app:axis_ordinate_name="@string/speed"
    app:axis_stroke_width="4"
    app:line_color="@color/garmin_green"
    app:point_color="@color/garmin_green"
    app:axis_abscissa_range_min="0"
    app:axis_abscissa_range_max="86400"
    app:axis_abscissa_step="7200"
    app:axis_abscissa_step_ratio="5"
    app:axis_ordinate_step_ratio="1"
    app:display_average_bar="true"
    app:average_bar_color="@color/garmin_blue"/>
</LinearLayout>
