<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".StatsActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/garmin_grey_background">

  <!-- HEADER -->
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/garmin_black"
    android:padding="5dp">

    <ImageButton
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:background="@android:color/transparent"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription" />

    <ImageButton
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:background="@android:color/transparent"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_baseline_more_vert_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <!-- Top info -->
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
      android:id="@+id/trackNameText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tack_name_placeholder"
      android:textColor="@color/garmin_text_white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/trackDateText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/date_placeholder"
      android:textColor="@color/garmin_text_grey"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/trackNameText" />

    <TextView
      android:id="@+id/lastUpdate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/last_update"
      android:textColor="@color/garmin_text_grey"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/lastUpdateTimeText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/time_pm_placeholder"
      android:textColor="@color/garmin_text_grey"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lastUpdate" />
  </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
